--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,14 +1,5 @@
-<!doctype html>
-<html>
-<head>
-    <title>Node Authentication</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <style>
-        body         { padding-top:80px; }
-    </style>
-</head>
-<body>
+<% include templates/header %>
+
 <div class="container">
 <div class="col-sm-6 col-sm-offset-3">
 
@@ -21,8 +12,16 @@
     <!-- LOGIN FORM -->
     <form action="/signup" method="post">
         <div class="form-group">
+            <label>First Name</label>
+            <input type="text" class="form-control" name="name_first">
+        </div>
+        <div class="form-group">
+            <label>Last Name</label>
+            <input type="text" class="form-control" name="name_last">
+        </div>
+        <div class="form-group">
             <label>Email</label>
-            <input type="text" class="form-control" name="email">
+            <input type="email" class="form-control" name="email">
         </div>
         <div class="form-group">
             <label>Password</label>
@@ -37,12 +36,7 @@
     <p>Already have an account? <a href="/login">Login</a></p>
     <p>Or go <a href="/">home</a>.</p>
 
-    <div class="text-center">
-        <p>A demo by <a href="http://scotch.io">Scotch</a>.</p>
-        <p>Visit the <a href="http://scotch.io/tutorials/javascript/easy-node-authentication-setup-and-local">tutorial</a>.</p>
-    </div>
+</div>
+</div>
 
-</div>
-</div>
-</body>
-</html>
+<% include templates/footer %>
