Removed Orders page, not functional yet

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,7 @@
 <% include templates/header %>
 
-<div class="container">
+<h2>This is the home page.</h2>
 
-    <div class="jumbotron text-center">
-        <h1><span class="fa fa-lock"></span> PC Repair Utah</h1>
-
-        <a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Login</a>
-        <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Signup</a>
-    </div>
-
-</div>
+<p>If you're here to buy computers, you're in the right place. If you're here to do much else, well... Good luck.</p>
 
 <% include templates/footer %>
