--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -23,9 +23,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/products">Products</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="/order">Place an Order</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <a class="nav-link" href="/signup">Sign Up</a>
                 </li>
